--- a/css/tablet-style.css
+++ b/css/tablet-style.css
@@ -44,3 +44,63 @@
 }
 
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*=================== $MAIN BANNER STYLE ===================*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+.main-banner {
+    background: url(../img/main-banner_desk.webp)no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+
+.main-banner__title {
+    font-size: 33px;
+    line-height: 35px;
+}
+
+.main-banner__sub-title {
+    font-size: 28px;
+    line-height: 34px;
+
+    margin-bottom: 292px;
+}
+
+
+.main-banner__button {
+    display: none;
+}
+
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*=================== $ACTION STYLE ===================*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+
+.timer {
+    width: 300px;
+}
+.pie {
+    width: 150px;
+    height: 150px;
+    bottom: -54px;
+    left: -54px;
+}
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
