--- a/css/desk-style.css
+++ b/css/desk-style.css
@@ -33,3 +33,60 @@
     font-size: 14px;
     line-height: 17px;
 }
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*=================== $MAIN BANNER STYLE ===================*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+.main-banner {
+    padding-top: 162px;
+    padding-bottom: 53px;
+}
+
+.main-banner__sub-title {
+    margin-bottom: 742px;
+}
+
+.main-banner__title {
+    font-size: 45px;
+    line-height: 54px;
+}
+
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+@media screen and (max-width: 1800px) {
+    .container {
+        padding: 150px;
+    }
+}
+
+
+@media screen and (max-width: 1600px) {
+    .container {
+        padding: 0 70px;
+    }
+}
+
+
+@media screen and (max-width: 1440px) {
+    .main-banner__sub-title {
+        margin-bottom: calc(100% - 624px);
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .main-banner {
+        padding-top: 108px;
+    }
+}
