--- a/css/tablet-style.css
+++ b/css/tablet-style.css
@@ -95,12 +95,12 @@
 .timer {
     width: 300px;
 }
-.pie {
-    width: 150px;
-    height: 150px;
+/* .pie {
+    width: 127px;
+    height: 127px;
     bottom: -54px;
     left: -54px;
-}
+} */
 
 
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
