--- a/css/style.css
+++ b/css/style.css
@@ -69,13 +69,38 @@ html, body {
     cursor: pointer;
 }
 
+.section__upper {
+    padding: 80px 0 40px;
+}
+
 .section__title {
     font-family: var(--family-sans);
-    font-weight: 400;
+    font-weight: 900;
     font-size: 24px;
     line-height: 29px;
     text-transform: uppercase;
     color: var(--color-red);
+
+    width: max-content;
+
+    position: relative;
+
+    margin: 0 auto;
+}
+
+.section__title::after {
+    content: "";
+
+    display: block;
+
+    width: 74px;
+    height: 4px;
+
+    background: var(--color-red);
+
+    margin-left: auto;
+    margin-top: 2px;
+
 }
 
 
@@ -195,9 +220,16 @@ html, body {
 }
 
 .action-container {
-    padding: 10px;
+    padding: 10px 10px 20px;
 
     background: #FFFFFF;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.25);
+}
+
+.action-info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .action-info__head {
@@ -217,7 +249,7 @@ html, body {
 }
 
 .action-info__button {
-    height: 60px;
+    height: 45px;
 
     font-weight: 700;
     font-size: 12px;
@@ -226,16 +258,32 @@ html, body {
 
     border: 1px solid var(--color-black);
     border-radius: 60px;
+
+    background: #FFFFFF;
+
+    margin-top: 35px;
 }
 
 .action-info__button.mob_hide {
     display: none;
 }
 
+.action-time {
+    margin-top: 20px;
+}
+
+.action-time__text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: var(--color-black);
+    text-transform: uppercase;
+}
+
 
 .timer {
     display: flex;
-    width: 68%;
+    width: 90%;
     justify-content: space-between;
     margin: 24px auto 0;
 }
@@ -247,41 +295,256 @@ html, body {
     position: relative;
 }
 .time-count__val {
-    font-weight: 700;
+    font-weight: 400;
     font-size: 24px;
-    line-height: 26px;
+    line-height: 29px;
+    color: var(--color-black);
 }
 .time-count__text {
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 20px;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 10px;
+    color: var(--color-black);
 }
 
 .pie {
     display: block;
-    width: 130px;
-    height: 130px;
+    width: 63px;
+    height: 63px;
     border-radius: 50%;
     transform: rotate(-90deg);
     position: absolute;
-    bottom: -45px;
-    left: -46px;
+    bottom: -15px;
+    left: -13px;
   }
   .pie .background{
     fill:none;
-    stroke:#ed060382;
-    stroke-width:3;
+    stroke: rgba(217, 217, 217, 0.2);
+    stroke-width: 1px;
    
   }
   .pie .chart{
     fill:none;
-    stroke: #E11903;
-    stroke-width:3;
+    stroke: var(--color-red);
+    stroke-width:1;
   }
 
 
 
   /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*=================== $MODELS STYLE ===================*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+.models__list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.models__list-item {
+    padding: 20px 10px;
+
+    box-shadow: 0px 0px 30px rgba(139, 139, 139, 0.25);
+}
+
+.models__list-item-top.mob_hide {
+    display: none;
+}
+
+.models__list-item-top {
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
+}
+
+.models__list-item-head {
+    font-family: var(--family-sans);
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 29px;
+    color: var(--color-black);
+    text-transform: uppercase;
+}
+
+.models__list-item-number {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
+    color: var(--color-black);
+}
+
+.models__list-item-img {
+    position: relative;
+}
+
+
+.models__img {
+    position: absolute;
+    max-width: 229px;
+    right: 0;
+    bottom: 24px;
+}
+
+.models__list-item-ball {
+    width: 198px;
+    height: 198px;
+
+    border-radius: 50%;
+
+    background: linear-gradient(213.37deg, #333333 7.15%, #A0A0A0 104.58%);
+
+    margin-left: auto;
+}
+
+
+.models__list-item-line {
+    height: 101px;
+
+    position: absolute;
+    bottom: 37px;
+    left: -10px;
+}
+
+
+.models__list-item-stocks {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+
+    margin-top: 12px;
+}
+
+.models__list-item-stocks-el {
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 16px;
+    color: var(--color-black);
+
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.models__list-item-stocks-el::before {
+    content: "";
+
+    display: block;
+
+    width: 49px;
+    height: 2px;
+
+    flex-basis: 15%;
+
+    background: var(--color-red);
+
+    margin-left: -10px;
+}
+
+.models__list-item-stocks-el b {
+    font-weight: bold;
+}
+
+.models__list-item-price {
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
+
+    margin: 24px 0 22px;
+}
+
+.models__list-item-price-flex {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.models__list-item-price-credit {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
+    color: var(--color-black);
+}
+
+.models__list-item-price-text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
+    color: var(--color-black);
+}
+
+.text_no_uppercase {
+    text-transform: none;
+}
+
+.models__list-item-btns {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.models__list-item-button {
+    height: 43px;
+
+    background: var(--color-black);
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.models__list-images {
+    display: none;
+}
+
+
+.models__list-item:nth-child(2n) .models__list-item-number {
+    width: max-content;
+
+    margin-left: auto;
+}
+
+.models__list-item:nth-child(2n) .models__list-item-ball {
+    margin-right: auto;
+    margin-left: 0;
+}
+
+.models__list-item:nth-child(2n) .models__list-item-line {
+    left: auto;
+    right: -10px;
+    transform: scale(-1);
+}
+
+.models__list-item:nth-child(2n) .models__img {
+    right: auto;
+    left: 0;
+}
+
+
+
+
+
+
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
 @media screen and (min-width: 360px) {
     .header__img {
@@ -302,5 +565,26 @@ html, body {
 @media screen and (min-width: 375px) {
     .main-banner__button {
         margin-top: calc(100% + 40px);
+    }
+}
+
+@media screen and (min-width: 430px) {
+    .models__list-item {
+        width: 400px;
+
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 480px) {
+
+    .action-time {
+        display: flex;
+        gap: 6px;
+    }
+    .timer {
+        width: 280px;
+
+        margin: 24px 0 0;
     }
 }
