--- a/css/tablet-style.css
+++ b/css/tablet-style.css
@@ -95,12 +95,24 @@
 .timer {
     width: 300px;
 }
-/* .pie {
-    width: 127px;
-    height: 127px;
-    bottom: -54px;
-    left: -54px;
-} */
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*=================== $EQUIP STYLE ===================*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+.equip__filter {
+    flex-direction: row;
+    gap: 30px;
+}
+
+.equip__filter-select {
+    flex-basis: 50%;
+}
 
 
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
