--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
         url('../fonts/TacticSans-Blk.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
-  }
+}
 
 
 :root {
@@ -53,7 +53,8 @@
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
-html, body {
+html,
+body {
     font-family: 'Century Gothic';
 }
 
@@ -101,6 +102,18 @@ html, body {
     margin-left: auto;
     margin-top: 2px;
 
+}
+
+.section__sub-title {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    text-transform: uppercase;
+    color: var(--color-black);
+
+    margin-top: 15px;
+
+    text-align: center;
 }
 
 
@@ -287,6 +300,7 @@ html, body {
     justify-content: space-between;
     margin: 24px auto 0;
 }
+
 .time-count__item {
     width: 40px;
     display: flex;
@@ -294,12 +308,14 @@ html, body {
     align-items: center;
     position: relative;
 }
+
 .time-count__val {
     font-weight: 400;
     font-size: 24px;
     line-height: 29px;
     color: var(--color-black);
 }
+
 .time-count__text {
     font-weight: 400;
     font-size: 8px;
@@ -316,22 +332,24 @@ html, body {
     position: absolute;
     bottom: -15px;
     left: -13px;
-  }
-  .pie .background{
-    fill:none;
+}
+
+.pie .background {
+    fill: none;
     stroke: rgba(217, 217, 217, 0.2);
     stroke-width: 1px;
-   
-  }
-  .pie .chart{
-    fill:none;
+
+}
+
+.pie .chart {
+    fill: none;
     stroke: var(--color-red);
-    stroke-width:1;
-  }
+    stroke-width: 1;
+}
 
 
 
-  /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
 
 
@@ -537,12 +555,131 @@ html, body {
     left: 0;
 }
 
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
 
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*=================== $EQUIP STYLE ===================*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
+.equip__filter {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
 
+.select2-container--default .select2-selection--single {
+    height: 43px;
 
+    display: flex;
+    align-items: center;
 
+    border: 1px solid var(--color-black);
+    border-radius: 0;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
+    color: var(--color-black);
+
+    padding-left: 10px;
+}
+
+.select2-results__option {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
+    color: var(--color-black);
+}
+
+.select2-container--default .select2-results__option--highlighted.select2-results__option--selectable {
+    background: var(--color-red);
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    border: none;
+
+    background: url(../img/arrow-select.svg)no-repeat;
+    background-position: center;
+
+    width: 21px;
+    height: 7px;
+    left: auto;
+    right: 18px;
+    top: 18px;
+}
+
+.equip__list {
+    margin-top: 75px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.equip__card-img img {
+    width: 100%;
+}
+
+.equip__card-text {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: var(--color-black);
+
+    margin-top: 20px;
+}
+
+.equip__card-model {
+    font-family: var(--family-sans);
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+    text-transform: uppercase;
+    color: var(--color-red);
+}
+
+.equip__card-name {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.equip__card-btns {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    margin-top: 30px;
+}
+
+.equip__card-button {
+    height: 57px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.equip__card-button.btn_bg_black {
+    background: var(--color-black);
+}
+
+.equip__card-button.btn_bg_gray {
+    background: #848484;
+}
 
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
@@ -555,11 +692,11 @@ html, body {
         font-size: 32px;
         line-height: 38px;
     }
-    
+
     .main-banner__button {
         margin-top: 360px;
     }
-    
+
 }
 
 @media screen and (min-width: 375px) {
@@ -574,6 +711,12 @@ html, body {
 
         margin: 0 auto;
     }
+
+    .equip__card {
+        width: 400px;
+
+        margin: 0 auto;
+    }
 }
 
 @media screen and (min-width: 480px) {
@@ -582,6 +725,7 @@ html, body {
         display: flex;
         gap: 6px;
     }
+
     .timer {
         width: 280px;
 
