--- a/css/style.css
+++ b/css/style.css
@@ -564,6 +564,17 @@ body {
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
+.equip {
+    position: relative;
+}
+
+.equip__img {
+    position: absolute;
+    right: 0;
+    top: 361px;
+    z-index: -1;
+}
+
 .equip__filter {
     display: flex;
     flex-direction: column;
@@ -683,6 +694,541 @@ body {
 
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*=================== $CREDIT STYLE ===================*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+.credit {
+    overflow: hidden;
+}
+
+.credit-img {
+    position: relative;
+}
+
+.credit-img__ball {
+    width: 250px;
+    height: 250px;
+
+    border-radius: 50%;
+
+    background: linear-gradient(213.37deg, #333333 7.15%, #A0A0A0 104.58%);
+
+    margin-left: auto;
+
+    margin-right: -55px;
+}
+
+.credit-img__car {
+    width: 100%;
+
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.credit-img__line {
+    height: 250px;
+
+    position: absolute;
+    top: 0;
+    right: -242px;
+}
+
+.credit-info__head {
+    font-family: var(--family-sans);
+    font-weight: 900;
+    font-size: 20px;
+    line-height: 24px;
+    color: var(--color-red);
+    text-transform: uppercase;
+    text-align: center;
+
+    display: block;
+}
+
+.credit-info {
+    margin-top: 30px;
+}
+
+.credit-info__list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    margin-top: 20px;
+}
+
+.credit-info__list-item {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000000;
+}
+
+.credit-info__list-item b {
+    font-weight: bold;
+}
+
+.credit-info__list-item::before,
+.trade-info__list-item::before  {
+    display: block;
+
+    content: "";
+
+    height: 2px;
+    flex-basis: 17%;
+
+    margin-left: -16px;
+
+    background: var(--color-red);
+}
+
+.credit__btn,
+.trade__btn {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+
+    height: 41px;
+
+    background: var(--color-black);
+
+    margin-top: 30px;
+}
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*=================== $TRADE STYLE ===================*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+.trade {
+    overflow: hidden;
+}
+
+.trade-img {
+    position: relative;
+
+    padding-bottom: 60px;
+}
+
+.trade-img__ball {
+    width: 115px;
+    height: 115px;
+
+    border-radius: 50%;
+
+    background: linear-gradient(213.37deg, #333333 7.15%, #A0A0A0 104.58%);
+
+    margin-left: auto;
+
+    z-index: 1;
+    position: relative;
+}
+
+.trade-img__line {
+    position: absolute;
+    top: 14px;
+    left: -16px;
+
+    height: 52px;
+
+}
+
+.trade-img__car {
+    width: 100%;
+
+    position: absolute;
+    bottom: 14px;
+    left: 0;
+    z-index: 1;
+}
+
+.trade-info {
+    margin-top: 30px;
+}
+
+.trade-info__head {
+    font-family: var(--family-sans);
+    font-weight: 900;
+    font-size: 20px;
+    line-height: 24px;
+    text-transform: uppercase;
+    color: var(--color-red);
+}
+
+.trade-info__list {
+    margin-top: 20px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.trade-info__list-item {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: var(--color-black);
+}
+
+.trade-info__list-item  b {
+    font-weight: bold;
+}
+
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*=================== $CONTACTS STYLE ===================*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+.contacts-map {
+    background: url(../img/map_mob.webp)no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    padding: 433px 0 30px;
+}
+
+.contacts-map__container {
+    padding: 30px 10px;
+
+    background: #FFFFFF;
+    box-shadow: 0px 0px 134px rgba(139, 139, 139, 0.25);
+
+    margin-bottom: -60px;
+}
+
+.contacts-map__list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.contacts-map__list-item {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: var(--color-black);
+    text-decoration: none;
+
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.contacts-map__list-item a {
+    text-decoration: none;
+    color: var(--color-black);
+}
+
+.contacts-map__list-item::before {
+    content: "";
+    display: block;
+
+    height: 2px;
+    flex-basis: 16%;
+
+    background: var(--color-red);
+
+    margin-left: -10px;
+}
+
+.contacts-map__btn {
+    height: 41px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+
+    background: var(--color-black);
+
+    margin-top: 21px;
+}
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*=================== $FOOTER STYLE ===================*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+.footer {
+    background: #272727;
+
+    padding: 30px;
+
+    margin-top: 80px;
+}
+
+.footer__info-link {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+
+.footer__link,
+.footer__info-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: #E7E7E7;
+    text-decoration: none;
+}
+
+.footer__info {
+    margin-top: 26px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+
+.footer__info-flex {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*=================== $POPUP STYLE ===================*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+.pop-up {
+    display: none;
+
+    padding: 10px;
+
+    background: url(../img/pop-up_bg.webp)no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.pop-up__info-text {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.pop-up__head {
+    font-family: var(--family-sans);
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 22px;
+    text-transform: uppercase;
+}
+
+.pop-up__sub-head {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: var(--color-red);
+    text-transform: uppercase;
+}
+
+.head_color {
+    color: #848484;
+}
+
+.pop-up__list {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    margin-top: 14px;
+}
+
+.pop-up__list-item {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: var(--color-black);
+    text-transform: uppercase;
+
+    display: flex;
+    align-items: center;
+    gap: 9px;
+}
+
+.pop-up__list-item b {
+    font-weight: bold;
+}
+
+.pop-up__list-item::before {
+    content: "";
+
+    display: block;
+
+    height: 2px;
+    width: 40px;
+
+    margin-left: -10px;
+
+    background: var(--color-red);
+}
+
+.pop-up__form {
+    margin-top: 193px;
+}
+
+.pop-up__form-inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.pop-up__input {
+    width: 100%;
+    height: 33px;
+
+    border: 1px solid #848484;
+
+    background: none;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #848484;
+
+    padding-left: 10px;
+}
+
+.pop-up__input::placeholder {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #848484;
+}
+
+.pop-up__btn {
+    height: 33px;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FFFFFF;
+
+    background: var(--color-black);
+
+    margin-top: 10px;
+}
+
+
+.form-checkbox label {
+    display: flex;
+    align-items: flex-start;
+    gap: 8px;
+
+    margin-top: 10px;
+
+    width: 100%;
+}
+
+.form__input-check[type=checkbox] {
+    position: absolute;
+    left: 0;
+    opacity: 0;
+    z-index: 2;
+}
+
+.form__input-check[type=checkbox] + .custom-checkbox {
+    display: block;
+
+    width: 9px;
+    height: 9px;
+
+    background: #D9D9D9;
+
+    border: 1px solid #848484;
+    border-radius: 50%;
+}
+
+.form__input-check[type=checkbox]:checked + .custom-checkbox  {
+    background-image: url(../img/ball-check.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 3px;
+}
+
+.checkbox-text {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+   color: var(--color-black);
+}
+
+.checkbox-text a {
+  color: var(--color-black);
+}
+
+
+.is-close-btn {
+    background: none;
+
+    top: 0;
+}
+
+.fancybox__content>.f-button.is-close-btn {
+    top: 0;
+}
+
+.f-button svg {
+    stroke: var(--color-red);
+}
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+
+
+.filtered-show,
+.showmore-show {
+    display: block;
+    opacity: 1;
+    transition: .3s;
+}
+
+.filtered-hide,
+.showmore-hide {
+    display: none;
+    opacity: 0;
+}
+
+
 @media screen and (min-width: 360px) {
     .header__img {
         max-width: 113px;
@@ -716,6 +1262,30 @@ body {
         width: 400px;
 
         margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 450px) {
+    .credit-img__car {
+        width: auto;
+
+        max-width: 433px;
+    }
+
+    .trade-img__car {
+        width: auto;
+
+        max-width: 355px;
+    }
+
+    .trade-img__ball {
+        margin-left: 316px;
+    }
+
+    .contacts-map__container {
+        width: 400px;
+
+        margin: 0 auto -60px;
     }
 }
 
