--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@
     font-style: italic;
   }
 
+ 
  :root {
     --family-gotham: 'Gotham Pro';
     --family-agressive: 'AGRESSIVE';
@@ -38,8 +39,13 @@
 
   body {
     font-family: 'Gotham Pro';
+    font-style: normal;
 
     background: var(--color-black);
+  }
+
+  button {
+    cursor: pointer;
   }
 
   /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
@@ -85,7 +91,7 @@
   }
 
   .container {
-    max-width: 328px;
+    padding: 0 16px;
     margin: 0 auto;
   }
 
@@ -100,6 +106,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    padding: 14px 0;
   }
 
   .header-btn.mob_hide {
@@ -107,7 +115,7 @@
   }
 
   .header__img {
-    max-width: 174px;
+    max-width: 124px;
   }
 
   .header-info {
