--- a/css/style.css
+++ b/css/style.css
@@ -1,137 +1,294 @@
 @font-face {
-    font-family: 'Gotham Pro';
-    src: local('Gotham Pro Regular'), local('Gotham-Pro-Regular'),
-        url('../fonts/GothamPro.woff2') format('woff2'),
-        url('../fonts/GothamPro.woff') format('woff'),
-        url('../fonts/GothamPro.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
+  font-family: 'Gotham Pro';
+  src: local('Gotham Pro Regular'), local('Gotham-Pro-Regular'),
+    url('../fonts/GothamPro.woff2') format('woff2'),
+    url('../fonts/GothamPro.woff') format('woff'),
+    url('../fonts/GothamPro.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gotham Pro';
+  src: local('Gotham Pro Bold'), local('Gotham-Pro-Bold'),
+    url('../fonts/GothamPro-Bold.woff2') format('woff2'),
+    url('../fonts/GothamPro-Bold.woff') format('woff'),
+    url('../fonts/GothamPro-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'AGRESSIVE';
+  src: local('AGRESSIVE'), local('AGRESSIVE'),
+    url('../fonts/AGRESSIVE.woff2') format('woff2'),
+    url('../fonts/AGRESSIVE.woff') format('woff'),
+    url('../fonts/AGRESSIVE.ttf') format('truetype');
+  font-weight: 700;
+  font-style: italic;
+}
+
+
+:root {
+  --family-gotham: 'Gotham Pro';
+  --family-agressive: 'AGRESSIVE';
+  --color-gold: #BF906C;
+  --color-black: #191B1D;
+  --color-white: #FFFFFF;
+}
+
+body {
+  font-family: 'Gotham Pro';
+  font-style: normal;
+
+  background: var(--color-black);
+}
+
+button {
+  cursor: pointer;
+}
+
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*================ $SECTION STYLE ===============*/
+
+.btn {
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn.bg_gold_color {
+  background: var(--color-gold);
+
+  color: var(--color-white);
+}
+
+.btn.bg_white_color {
+  background: var(--color-white);
+
+  color: var(--color-black);
+}
+
+.section__title {
+  font-family: var(--family-agressive);
+  font-style: italic;
+  font-weight: 700;
+  font-size: 37px;
+  line-height: 43px;
+  text-transform: uppercase;
+  background: linear-gradient(180deg, rgba(191, 144, 108, 0.4) 0%, rgba(191, 144, 108, 0) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
+.section__title.align_left {
+  text-align: left;
+}
+
+.section__title.align_right {
+  text-align: right;
+}
+
+.container {
+  padding: 0 16px;
+  margin: 0 auto;
+}
+
+/*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+
+
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*================ $HEADER STYLE ===============*/
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 14px 0;
+}
+
+.header-btn.mob_hide {
+  display: none;
+}
+
+.header__img {
+  max-width: 124px;
+}
+
+.header-info {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.header-info__text {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 10px;
+  text-decoration: none;
+  color: var(--color-white);
+
+  text-align: right;
+}
+
+/*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+
+
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*================ $MAIN-BANNER STYLE ===============*/
+
+
+.main-banner {
+  background: url(../img/main-banner_mob.webp)no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  padding: 83px 0 20px;
+}
+
+.main-banner__title {
+  font-family: var(--family-agressive);
+  font-style: italic;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--color-gold);
+
+  margin-bottom: 20px;
+}
+
+.main-banner__sub-title {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 15px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--color-white);
+
+  display: block;
+
+  margin-bottom: calc(100% + -40px);
+}
+
+.main-banner__button {
+  height: 60px;
+
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 11px;
+}
+
+.main-banner__time {
+  margin: 30px 0 -114px;
+}
+
+.main-banner__time-text {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.main-banner__time-price {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 15px;
+  text-transform: uppercase;
+  color: var(--color-white);
+}
+
+.main-banner__time-action {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 13px;
+  text-transform: uppercase;
+  color: var(--color-gold);
+}
+
+.timer {
+  display: flex;
+  width: 92%;
+  justify-content: space-between;
+  margin: 35px auto 0;
+}
+
+.time-count__item {
+  width: 40px;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  position: relative;
+}
+
+.time-count__val {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 23px;
+  text-transform: uppercase;
+  color: var(--color-white);
+}
+
+.time-count__text {
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 8px;
+  text-transform: uppercase;
+  color: var(--color-white);
+}
+
+.pie {
+  display: block;
+  width: 63px;
+  height: 63px;
+  border-radius: 50%;
+  transform: rotate(-90deg);
+  position: absolute;
+  bottom: -14px;
+  left: -11px;
+}
+
+.pie .background {
+  fill: none;
+  stroke: var(--color-gold);
+  stroke-width: 1;
+
+}
+
+.pie .chart {
+  fill: none;
+  stroke: var(--color-white);
+  stroke-width: 1;
+}
+
+/*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+
+@media screen and (min-width: 430px) {
+  .main-banner__time {
+    width: 400px;
+
+    margin: 30px auto -114px;
   }
 
-  @font-face {
-    font-family: 'Gotham Pro';
-    src: local('Gotham Pro Bold'), local('Gotham-Pro-Bold'),
-        url('../fonts/GothamPro-Bold.woff2') format('woff2'),
-        url('../fonts/GothamPro-Bold.woff') format('woff'),
-        url('../fonts/GothamPro-Bold.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-  }
+  .main-banner__button {
+    width: 400px;
 
-  @font-face {
-    font-family: 'AGRESSIVE';
-    src: local('AGRESSIVE'), local('AGRESSIVE'),
-        url('../fonts/AGRESSIVE.woff2') format('woff2'),
-        url('../fonts/AGRESSIVE.woff') format('woff'),
-        url('../fonts/AGRESSIVE.ttf') format('truetype');
-    font-weight: 700;
-    font-style: italic;
-  }
-
- 
- :root {
-    --family-gotham: 'Gotham Pro';
-    --family-agressive: 'AGRESSIVE';
-    --color-gold: #BF906C;
-    --color-black: #191B1D;
-    --color-white: #FFFFFF;
- }
-
-  body {
-    font-family: 'Gotham Pro';
-    font-style: normal;
-
-    background: var(--color-black);
-  }
-
-  button {
-    cursor: pointer;
-  }
-
-  /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-  /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-  /*================ $SECTION STYLE ===============*/
-
-  .btn {
-    width: 100%;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .btn.bg_gold_color {
-    background: var(--color-gold);
-
-    color: var(--color-white);
-  }
-  .btn.bg_white_color {
-    background: var(--color-white);
-
-    color: var(--color-black);
-  }
-
-  .section__title {
-    font-family: var(--family-agressive);
-    font-style: italic;
-    font-weight: 700;
-    font-size: 37px;
-    line-height: 43px;
-    text-transform: uppercase;
-    background: linear-gradient(180deg, rgba(191, 144, 108, 0.4) 0%, rgba(191, 144, 108, 0) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-fill-color: transparent;
-  }
-  .section__title.align_left {
-    text-align: left;
-  }
-  .section__title.align_right {
-    text-align: right;
-  }
-
-  .container {
-    padding: 0 16px;
     margin: 0 auto;
   }
-
-  /*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
-
-
-   /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-  /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-  /*================ $HEADER STYLE ===============*/
-
-  .header-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    padding: 14px 0;
-  }
-
-  .header-btn.mob_hide {
-    display: none;
-  }
-
-  .header__img {
-    max-width: 124px;
-  }
-
-  .header-info {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-  }
-
-  .header-info__text {
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 10px;
-    text-decoration: none;
-    color: var(--color-white);
-
-    text-align: right;
-  }
-
-  /*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+}
