--- a/css/tablet-style.css
+++ b/css/tablet-style.css
@@ -7,3 +7,18 @@
   }
 
   /*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+
+
+  /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+  /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+  /*================ $EQUIP STYLE ===============*/
+
+  .equip__filter {
+    flex-direction: row;
+  }
+
+  .equip__select {
+    flex-basis: 33%;
+  }
+
+  /*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
