--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,405 @@ button {
 
 /*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
 
+
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*================ $MODELS STYLE ===============*/
+
+.models__upper {
+  padding: 190px 5px 0;
+}
+
+.models__list {
+  margin-top: 60px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.models__card-info {
+  display: flex;
+  flex-direction: column;
+
+  margin-bottom: 17px;
+}
+
+.models__card-head {
+  font-family: var(--family-agressive);
+  font-style: italic;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 37px;
+  color: var(--color-white);
+
+  margin-bottom: 20px;
+}
+
+.models__card-number {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 13px;
+  text-transform: uppercase;
+  color: var(--color-white);
+}
+
+.models__card-number b {
+  font-weight: bold;
+}
+
+.models__colors-container {
+  display: flex;
+  gap: 15px;
+
+  margin-top: 20px;
+}
+
+.models__card-color {
+  display: block;
+
+  width: 27px;
+  height: 27px;
+
+  border-radius: 50%;
+
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.models__card-color.color-active::before {
+  content: "";
+
+  display: block;
+
+  width: 13px;
+  height: 13px;
+
+  background: url(../img/ok-color.svg)no-repeat;
+}
+
+.swiper-pagination {
+  display: none;
+}
+
+.models__card-benefit {
+  font-family: var(--family-agressive);
+  font-style: italic;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: var(--color-gold);
+  text-transform: uppercase;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  margin-top: 40px;
+}
+
+.models__card-img {
+  position: relative;
+}
+
+.card__img {
+  width: 100%;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+
+  z-index: -1;
+
+  transition: all .6s;
+}
+
+.card__img.js-active {
+  position: static;
+  opacity: 1;
+  z-index: 1;
+}
+
+.models__card-images {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+
+  margin-top: 20px;
+}
+
+.models__card-prev {
+  width: 100%;
+}
+
+.models__card-action {
+  padding: 20px 10px;
+
+  border: 1px solid var(--color-gold);
+
+  margin-top: 30px;
+}
+
+.models__card-list {
+  display: grid;
+  row-gap: 20px;
+}
+
+.models__card-item {
+  display: flex;
+  align-items: center;
+  gap: 9px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 15px;
+  color: var(--color-white);
+}
+
+.models__card-item b {
+  font-weight: bold;
+}
+
+.models__card-item::before {
+  content: "";
+
+  display: block;
+
+  background: url(../img/arrow-card.svg)no-repeat;
+  width: 70px;
+  height: 4px;
+
+  margin-left: -10px;
+}
+
+.models__card-credit {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 11px;
+  text-transform: uppercase;
+  color: var(--color-white);
+
+  margin: 46px 0 28px;
+}
+
+.models__card-credit_big_size {
+  font-size: 20px;
+  line-height: 19px;
+}
+
+.models__card-price {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 11px;
+  text-transform: uppercase;
+  color: var(--color-white);
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.models__card-price_big_size {
+  font-size: 20px;
+  line-height: 19px;
+}
+
+.models__card-btns {
+  display: grid;
+  row-gap: 10px;
+
+  margin-top: 14px;
+}
+
+.models__card-button {
+  height: 43px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 13px;
+  text-transform: uppercase;
+}
+
+/*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+
+
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*================ $EQUIP STYLE ===============*/
+
+.equip__upper {
+  padding: 100px 0 60px;
+}
+
+.equip__title {
+  font-size: 30px;
+  line-height: 35px;
+}
+
+.equip__filter {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.select2-container--default .select2-selection--single {
+  height: 39px;
+
+  background: none;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid var(--color-gold);
+
+  position: relative;
+
+  display: flex;
+  align-items: center;
+}
+
+.select2-container--default .select2-selection--single::before {
+  content: "";
+
+  display: block;
+
+  width: 1px;
+  height: 39px;
+
+  background: rgb(191, 144, 108);
+  background: linear-gradient(0deg, rgba(191, 144, 108, 1) 0%, rgba(191, 144, 108, 0) 100%);
+
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.select2-container--default .select2-selection--single::after {
+  content: "";
+
+  display: block;
+
+  width: 1px;
+  height: 39px;
+
+  background: rgb(191, 144, 108);
+  background: linear-gradient(0deg, rgba(191, 144, 108, 1) 0%, rgba(191, 144, 108, 0) 100%);
+
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+  border: none;
+
+  width: 20px;
+  height: 11px;
+
+  background: url(../img/arrow-select.svg)no-repeat;
+
+  top: 16px;
+  left: auto;
+  right: 20px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+  padding-left: 20px;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 17px;
+  color: var(--color-gold);
+}
+
+.select2-container--open .select2-dropdown--below,
+.select2-container--open .select2-dropdown--above {
+  background: var(--color-black);
+
+  border: 1px solid var(--color-gold);
+}
+
+.select2-container--default .select2-results__option--highlighted.select2-results__option--selectable {
+  background: var(--color-gold);
+}
+
+.select2-results__option {
+  color: var(--color-gold);
+
+  font-size: 14px;
+  line-height: 16px;
+
+  padding: 10px 20px;
+}
+
+.equip__list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+
+  margin-top: 40px;
+}
+
+.equip__card {
+  padding: 10px;
+
+  border: 1px solid var(--color-gold);
+}
+
+.equip__card-images {
+  width: 100%;
+}
+
+.equip__card-info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  margin-top: 10px;
+}
+
+.equip__card-head {
+  font-family: var(--family-agressive);
+  font-style: italic;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 37px;
+  text-transform: uppercase;
+  color: var(--color-white);
+}
+
+.equip__card-name,
+.equip__card-drive {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 13px;
+  color: var(--color-gold);
+}
+
+.equip__card-spec {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 15px;
+  color: var(--color-gold);
+}
+
+.equip__card-button {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 13px;
+  text-transform: uppercase;
+
+  height: 43px;
+}
+
+/*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+
 @media screen and (min-width: 430px) {
   .main-banner__time {
     width: 400px;
@@ -290,5 +689,16 @@ button {
     width: 400px;
 
     margin: 0 auto;
+  }
+
+  .models__list {
+    width: 400px;
+    margin: 60px auto 0;
+  }
+
+  .equip__list {
+    width: 400px;
+
+    margin: 40px auto 0;
   }
 }
